# picachu-association-service

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
association_model/: association_dict.txt  logic.py  model.py
basic_model_binding/: message_packer.py  messages_traffic_controller.py
config/: rabbitmq_config.py
core/: model_base.py  model_result.py
infrastructure/rabbitmq/: rabbitmq_config_provider.py
model/: association_model.py
