[tool.poetry]
name = "Association-model"
version = "0.1.0"
description = ""
authors = [
    "Maria Yadryshnikova <myadryshnikova@tourmalinecore.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.9"
pydantic = "^1.10.4"
boto3 = "^1.21.42"
boto3-stubs-lite = "^1.26.8"
pydrive2 = "^1.15.0"
pyinstaller = "^5.6.2"
transformers = "^4.24.0"
pika = "^1.3.1"
